2002-06-24  Jeff Freedman  <jeff@amy.nerble.net>

	* actions.h,usecode/intrinsics.cc: as_usecode_path().

2002-06-23  Ryan Nunn  <triforce@merlin.net.au>
	* msvcstuff/find_nearby.h : Removed because it's now shared for all
	* Makefile.am : Removed msvcstuff/find_nearby.h
	* objs/find_nearby.h : Added so it can be used by all
	* objs/Makefile.am : Added find_nearby.h
	* objs/*.* : Removed old Game_object::find_nearby template and now use
	  find_nearby.h and macros.

2002-06-22  Ryan Nunn  <triforce@merlin.net.au>
	* LOTS OF FILES : Added code to do caching out to memory. However, it's
	  disabled for the moment. Need to #define WANT_MAP_CACHE_OUT to enable
	  it. Added lots of get_ireg_size() methods that return the size
	  required to save the ireg of each object.
	* gumps/Paperdoll_gump*.* : Fixing up various paperdoll related problems
	* actors.h, objs/*.*, msvcstuff/find_nearby.h, usecode/intrinsics.cc : 
	  Cleanup removing dynamic_casts.
	* windrag.* : Is now windows only, and is only compiled if actually
	  compiling with Exult studio support.
	* various other files: Fixing misc compiling problems

2002-06-21  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* gamerend.h:  Helper-class added to do rendering.

	* gamewin.h,shapeid.h, etc: ShapeID::paint_shape() replaces one of the
	paint_shape()'s in Game_window, and gamewin.h no longer includes
	shapeid.h. 

2002-06-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Paperdoll_gump.cc: fixed bug when displaying usecode container
	* objs.cc: zero-weight fix
	* gamewin.cc: display object weight

2002-06-21  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* actors.cc (Npc_actor): Cleanup: Lots more dynamic_cast's are gone.

2002-06-21  Darke  <darke@users.sourceforge.net>
	* shapeid.cc: Added using declarations. Committed for Kirben.

2002-06-20  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* objs.{cc,h},etc:  Added 'change_frame()' to set repaint area.
	* gamewin.h (public): get_info(), etc. moved to ShapeID.